# quant-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: adversarial.yaml  app.yaml  exchange.yaml  risk.yaml  strategy.yaml
src/analytics/: metrics.py  report.py
src/execution/: backtest.py  base.py  live.py  paper.py
src/orchestrator/: __init__.py  backtest.py  base.py  live.py  paper.py
src/portfolio/: manager.py
src/risk/: adversarial.py  circuit.py  manager.py  position.py  stoploss.py
src/strategy/: base.py  bollinger.py  fusion.py  indicators.py  macd.py  registry.py  rsi.py  sma_cross.py
src/utils/: backoff.py  config.py  errors.py  logging.py  state.py
tests/: conftest.py  test_adversarial.py  test_analytics.py  test_cli.py  test_config.py  test_data.py  test_execution.py  test_fusion.py  test_integration.py  test_portfolio.py  test_risk.py  test_state.py  test_strategies.py
tests/fixtures/: equity_samples.py  ohlcv_samples.py
