[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-project"
version = "1.0.0"
description = "量化交易系统 — 多策略回测+模拟盘+实盘，Docker 一键部署"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "ccxt==4.2.10",
    "pandas==2.2.0",
    "numpy==1.26.3",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "loguru==0.7.2",
    "rich==13.7.0",
    "websocket-client==1.7.0",
    "plotly==5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.2.0",
    "ruff==0.3.0",
]

[project.scripts]
quant-backtest = "main:main_backtest"
quant-paper = "main:main_paper"
quant-live = "main:main_live"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "network: 需要交易所连接（默认跳过）",
    "slow: 耗时测试（>10秒）",
]
